syntax = "proto3";
package common;
option go_package = "proto/";
import "google/protobuf/timestamp.proto";
message Key {
  string prefix = 1;
  bytes hash = 2;
}

message InitiateRequest {
  common.Key key = 1;
  uint64 payload_size = 2;
}

enum Scheme {
  HTTP = 0;
  HTTPS = 1;
}

message EndpointConfig {
  string host = 1;
  int32 port = 2;
  Scheme scheme = 3;
  string root_ca_certificate = 4;
}

message InitiateResponse {
  // filled but deprecated in v0.2.0 clients should use host in endpoint config
  string cas_hostname = 1;
  
  EndpointConfig data_plane_endpoint = 2;
  EndpointConfig put_complete_endpoint = 3;
}

message Empty {
}
