syntax = "proto3";
package infra;
import public "common.proto";

service InfraUtils {
  rpc EndpointLoad(common.Empty) returns (EndpointLoadResponse);
  // Initiates uploads of an object.
  rpc Initiate(common.InitiateRequest) returns (common.InitiateResponse);
}

message SystemStatus {
  string timestamp = 1;
  double cpu_utilization = 2;
}
message LoadStatus {
  string address = 1;
  SystemStatus status = 2;
}

message EndpointLoadResponse {
  repeated LoadStatus responses = 1;
}
